CONTAINER ORCHESTRATION – SECURITY/nginx-privatepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers: 
  - name: myapp1
    image: private-registry.io/apps/internal-app 
  imagePullSecrets:
  - name: regcred



#create secret for docker login=
# -->kubectl create secret docker-registry regcred \--docker-server= private-registry.io --docker-username= registry-user --docker-password=registry-password --docker-email= registry-user@org.com

# regcred = credetials for docker login
