CONTAINER ORCHESTRATION – SECURITY/network-policy.yaml
apiVersion: networking.k8s.io/vl
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
            name: api-pod
  ports:
    - protocol: TCP
      port: 3306

#kubectl create -f policy-definition.yaml
